--- a/Count_Down_Web/style.css
+++ b/Count_Down_Web/style.css
@@ -9,7 +9,7 @@
 .main {
     width: 100%;
     height: 100vh;
-    background: url('/Count-Down/1802071.webp') no-repeat center center/cover;
+    background: url('/Count_Down_Web/1802071.webp') no-repeat center center/cover;
 }
 
 /* Overlay to darken background and center content */
